pizza weights text alignment fix with media

--- a/src/components/batchCodes/batchCodes.css
+++ b/src/components/batchCodes/batchCodes.css
@@ -85,6 +85,10 @@
   .batchTextBoxEnd{
     width:fit-content;
   }
+  .pizzaWeights {
+    flex-direction: column;
+    text-align: right;
+  }
 }
 
 
